added implementation HU-10
